feat: :sparkles: little config update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 ## Flyway
+spring.flyway.enabled=true
+spring.flyway.encoding=UTF-8
 spring.flyway.locations=classpath:db/migration,filesystem:./sql/migrations
 
 ## JWT
