--- a/build.gradle
+++ b/build.gradle
@@ -34,15 +34,20 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-rest'
   implementation 'org.springframework.boot:spring-boot-starter-rsocket'
   implementation 'org.springframework.boot:spring-boot-starter-security'
+  implementation 'org.springframework.boot:spring-boot-starter-tomcat'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
+  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+  implementation 'org.apache.commons:commons-lang3:3.17.0'
   implementation 'org.flywaydb:flyway-core'
   implementation 'org.flywaydb:flyway-database-postgresql'
   implementation 'com.zaxxer:HikariCP'
   runtimeOnly 'org.flywaydb:flyway-gradle-plugin:10.18.2'
   implementation 'org.springframework.security:spring-security-messaging'
   implementation 'org.springframework.security:spring-security-rsocket'
-  implementation 'io.jsonwebtoken:jjwt:0.12.3'
+  implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
   compileOnly 'org.projectlombok:lombok'
   runtimeOnly 'org.postgresql:postgresql'
   implementation 'org.hibernate:hibernate-core:6.6.0.Final'
