--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 ## Log JdbcTemplate
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
@@ -35,7 +36,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 ## Flyway
 spring.flyway.enabled=true
 spring.flyway.encoding=UTF-8
-spring.flyway.locations=classpath:db/migration,filesystem:./sql/migrations
+spring.flyway.locations=classpath:db/migration
 
 ## JWT
 app.jwt.secret=${JWT_SECRET}
