--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-tomcat'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
+  implementation 'org.springframework.boot:spring-boot-starter-cache'
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
   implementation 'org.apache.commons:commons-lang3:3.17.0'
   implementation 'org.flywaydb:flyway-core'
@@ -45,9 +46,12 @@ dependencies {
   runtimeOnly 'org.flywaydb:flyway-gradle-plugin:10.18.2'
   implementation 'org.springframework.security:spring-security-messaging'
   implementation 'org.springframework.security:spring-security-rsocket'
+  implementation 'org.mapstruct:mapstruct:1.6.2'
   implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta:2.18.0'
+  implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
   compileOnly 'org.projectlombok:lombok'
   runtimeOnly 'org.postgresql:postgresql'
   implementation 'org.hibernate:hibernate-core:6.6.0.Final'
