feat: :sparkles: add locations pages

--- a/build.gradle
+++ b/build.gradle
@@ -46,16 +46,18 @@ dependencies {
   runtimeOnly 'org.flywaydb:flyway-gradle-plugin:10.18.2'
   implementation 'org.springframework.security:spring-security-messaging'
   implementation 'org.springframework.security:spring-security-rsocket'
-  implementation 'org.mapstruct:mapstruct:1.6.2'
   implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta:2.18.0'
   implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
   compileOnly 'org.projectlombok:lombok'
+  annotationProcessor 'org.projectlombok:lombok'
+  implementation 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
+  implementation 'org.mapstruct:mapstruct:1.6.2'
+  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
   runtimeOnly 'org.postgresql:postgresql'
   implementation 'org.hibernate:hibernate-core:6.6.0.Final'
-  annotationProcessor 'org.projectlombok:lombok'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.projectreactor:reactor-test'
   testImplementation 'org.springframework.security:spring-security-test'
