--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-cache'
+  implementation 'org.springframework.boot:spring-boot-starter-websocket'
+  implementation 'org.springframework:spring-messaging'
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
   implementation 'org.apache.commons:commons-lang3:3.17.0'
   implementation 'org.flywaydb:flyway-core'
