--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,5 @@ spring.flyway.encoding=UTF-8
 spring.flyway.locations=classpath:db/migration
 
 ## JWT
-app.jwt.secret=${JWT_SECRET}
+app.jwt.token.secret=${JWT_SECRET}
+app.jwt.token.expiration=${JWT_EXPIRATION}
