chore(deps): :link: fix spring-websockets version

--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,9 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-cache'
-  implementation 'org.springframework.boot:spring-boot-starter-websocket'
-  implementation 'org.springframework:spring-messaging'
+  implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.4'
+  implementation 'org.springframework:spring-websocket:6.1.13'
+  implementation 'jakarta.websocket:jakarta.websocket-api:2.2.0'
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
   implementation 'org.apache.commons:commons-lang3:3.17.0'
   implementation 'org.flywaydb:flyway-core'
