--- a/build.gradle
+++ b/build.gradle
@@ -29,41 +29,50 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-  implementation 'org.springframework.boot:spring-boot-starter-rsocket'
-  implementation 'org.springframework.boot:spring-boot-starter-security'
-  implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+  // Spring
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
-  implementation 'org.springframework.boot:spring-boot-starter-cache'
-  implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.4'
   implementation 'org.springframework:spring-websocket:6.1.13'
-  implementation 'jakarta.websocket:jakarta.websocket-api:2.2.0'
-  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-  implementation 'org.apache.commons:commons-lang3:3.17.0'
-  implementation 'org.flywaydb:flyway-core'
-  implementation 'org.flywaydb:flyway-database-postgresql'
-  implementation 'com.zaxxer:HikariCP'
-  runtimeOnly 'org.flywaydb:flyway-gradle-plugin:10.18.2'
-  implementation 'org.springframework.security:spring-security-messaging'
-  implementation 'org.springframework.security:spring-security-rsocket'
+
+  // JSON
+  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta:2.18.0'
+  implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
+
+  // Lombok
+  compileOnly 'org.projectlombok:lombok'
+  annotationProcessor 'org.projectlombok:lombok'
+
+  // MapStruct
+  implementation 'org.mapstruct:mapstruct:1.6.2'
+  implementation 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
+  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
+
+  // JJWT
   implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
-  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta:2.18.0'
-  implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
-  compileOnly 'org.projectlombok:lombok'
-  annotationProcessor 'org.projectlombok:lombok'
-  implementation 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
-  implementation 'org.mapstruct:mapstruct:1.6.2'
-  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
+
+  // Database
   runtimeOnly 'org.postgresql:postgresql'
   implementation 'org.hibernate:hibernate-core:6.6.0.Final'
-  testImplementation 'org.springframework.boot:spring-boot-starter-test'
-  testImplementation 'io.projectreactor:reactor-test'
-  testImplementation 'org.springframework.security:spring-security-test'
+
+  // Utils
+  implementation 'org.apache.commons:commons-lang3:3.17.0'
+
+  // Flyway
+  implementation 'org.flywaydb:flyway-core'
+  implementation 'org.flywaydb:flyway-database-postgresql'
+  runtimeOnly 'org.flywaydb:flyway-gradle-plugin:10.18.2'
+
+  // Swagger UI
+  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+
+  // Testing
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
