fix(frontend): fix placeholders values
	- fix username and password placeholders scope at login page
		- username from 4-15 to 4-255
		- password from 4+ to 6-128

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "i18next-http-backend": "^1.2.6",
     "is-mobile": "^3.0.0",
     "konva": "9.1.0",
+    "luxon": "3.5.0",
     "notistack": "^1.0.5",
     "react": "^17.0.1",
     "react-detect-offline": "^2.4.3",
