--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   id 'org.springframework.boot' version '3.3.4'
   id 'io.spring.dependency-management' version '1.1.6'
   id 'org.flywaydb.flyway' version '9.8.1'
+  id 'jacoco'
 }
 
 group = 'ru.ifmo.is'
@@ -69,12 +70,43 @@ dependencies {
   // Swagger UI
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
+  // DevTools
+  developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
   // Testing
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.security:spring-security-test'
 }
 
+jacoco {
+  toolVersion = '0.8.12'
+}
+
+jacocoTestReport {
+  dependsOn test
+  finalizedBy jacocoTestCoverageVerification
+  reports {
+    xml.required = true
+    html.required = true
+  }
+}
+
+jacocoTestCoverageVerification {
+  dependsOn test
+  violationRules {
+    rule {
+      limit {
+        minimum = 0.0
+      }
+    }
+  }
+}
+
 tasks.named('test') {
+  finalizedBy jacocoTestReport
   useJUnitPlatform()
+  testLogging {
+    exceptionFormat = 'full'
+  }
 }
