--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
   // Utils
   implementation 'org.apache.commons:commons-lang3:3.17.0'
+  implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
 
   // Flyway
   implementation 'org.flywaydb:flyway-core'
