--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-draggable": "4.4.5",
     "react-i18next": "^11.11.3",
     "react-iconly": "^2.2.10",
+    "react-icons": "5.3.0",
     "react-konva": "17.0.2-6",
     "react-meta-tags": "^1.0.1",
     "react-redux": "^7.2.2",
