--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,24 @@
-version: "3.9"
 services:
+  app:
+    container_name: app
+    env_file: .env
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres
+    environment:
+      - POSTGRES_DB=$POSTGRES_DB
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_PORT=$POSTGRES_PORT
+      - JWT_SECRET=$JWT_SECRET
+      - JWT_EXPIRATION=$JWT_EXPIRATION
+    ports:
+      - "8080:8080"
+    networks:
+      - app-network
+
   postgres:
     env_file: .env
     image: postgres:14.2
