build: :building_construction: `experimentalDecorators` for `tsc`

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,6 +19,7 @@
     "noImplicitReturns": false,
     "noImplicitThis": true,
     "noImplicitAny": false,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
