--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,3 +2,4 @@ PORT=3000
 # The ENV variable must be prefixed with REACT_APP_
 REACT_APP_API_URL=http://localhost:8080/api
 REACT_APP_PUBLIC_URL=http://localhost:3000
+REACT_APP_WS_URL=ws://localhost:8080/ws
