--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
   // Utils
   implementation 'org.apache.commons:commons-lang3:3.17.0'
   implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
+  implementation 'commons-io:commons-io:2.16.1'
 
   // Flyway
   implementation 'org.flywaydb:flyway-core'
