--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-detect-offline": "^2.4.3",
     "react-dom": "^17.0.1",
     "react-draggable": "4.4.5",
+    "react-dropzone": "14.3.5",
     "react-i18next": "^11.11.3",
     "react-iconly": "^2.2.10",
     "react-icons": "5.3.0",
