chore: :wrench: setup `MinIO`

--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,8 @@ POSTGRES_PASSWORD=s367081
 POSTGRES_PORT=5432
 JWT_SECRET=your_secret_here
 JWT_EXPIRATION=31556952000
+MINIO_HOST=http://localhost
+MINIO_ROOT_USER=s367081
+MINIO_ROOT_PASSWORD=minios367081
+MINIO_API_PORT=9000
+MINIO_CONSOLE_PORT=9001
