--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - POSTGRES_PORT=$POSTGRES_PORT
       - JWT_SECRET=$JWT_SECRET
       - JWT_EXPIRATION=$JWT_EXPIRATION
+      - MINIO_HOST=$MINIO_HOST
+      - MINIO_ROOT_USER=$MINIO_ROOT_USER
+      - MINIO_ROOT_PASSWORD=$MINIO_ROOT_PASSWORD
+      - MINIO_API_PORT=$MINIO_API_PORT
+      - MINIO_CONSOLE_PORT=$MINIO_CONSOLE_PORT
     ports:
       - "8080:8080"
     networks:
@@ -34,7 +39,24 @@ services:
     volumes:
       - database_data:/var/lib/postgresql/data
 
+  minio:
+    env_file: .env
+    image: minio/minio:RELEASE.2024-11-07T00-52-20Z
+    command: server /data --console-address ":${MINIO_CONSOLE_PORT}"
+    environment:
+      - MINIO_HOST=${MINIO_HOST}
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    ports:
+      - "${MINIO_API_PORT}:${MINIO_API_PORT}"
+      - "${MINIO_CONSOLE_PORT}:${MINIO_CONSOLE_PORT}"
+    networks:
+      - app-network
+    volumes:
+      - minio_storage:/data
+
 volumes:
+  minio_storage: { }
   database_data:
     driver: local
 
