chore: :wrench: add minio bucket name

--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,7 @@ POSTGRES_PORT=5432
 JWT_SECRET=your_secret_here
 JWT_EXPIRATION=31556952000
 MINIO_HOST=http://localhost
+MINIO_BUCKET_NAME=lab3
 MINIO_ROOT_USER=s367081
 MINIO_ROOT_PASSWORD=minios367081
 MINIO_API_PORT=9000
