--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - JWT_SECRET=$JWT_SECRET
       - JWT_EXPIRATION=$JWT_EXPIRATION
       - MINIO_HOST=$MINIO_HOST
+      - MINIO_BUCKET_NAME=MINIO_BUCKET_NAME
       - MINIO_ROOT_USER=$MINIO_ROOT_USER
       - MINIO_ROOT_PASSWORD=$MINIO_ROOT_PASSWORD
       - MINIO_API_PORT=$MINIO_API_PORT
@@ -45,6 +46,7 @@ services:
     command: server /data --console-address ":${MINIO_CONSOLE_PORT}"
     environment:
       - MINIO_HOST=${MINIO_HOST}
+      - MINIO_BUCKET_NAME=${MINIO_BUCKET_NAME}
       - MINIO_ROOT_USER=${MINIO_ROOT_USER}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     ports:
