chore(deps): :link: add minio/minio

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
   implementation 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
   annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
 
+  // MinIO
+  implementation 'io.minio:minio:8.5.14'
+
   // JJWT
   implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
