--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+## MinIO
+minio.host=${MINIO_HOST}
+minio.port_api=${MINIO_API_PORT}
+minio.port_console=${MINIO_CONSOLE_PORT}
+minio.username=${MINIO_ROOT_USER}
+minio.password=${MINIO_ROOT_PASSWORD}
+minio.bucket_name=${MINIO_BUCKET_NAME}
+
 ## Log JdbcTemplate
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
